objects/Snippet__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>Submission__r.Agency_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Status__c</fullName>
        <label>Comment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snippet Entered</fullName>
                    <default>true</default>
                    <label>Snippet Entered</label>
                </value>
                <value>
                    <fullName>Snippet Entry Verified</fullName>
                </value>
                <value>
                    <fullName>Ready for Agency Review</fullName>
                </value>
                <value>
                    <fullName>Comment Added</fullName>
                </value>
                <value>
                    <fullName>Addressed in Essay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commenter_Category__c</fullName>
        <formula>Text(Submission__r.Commenter_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commenter Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commenter_Name__c</fullName>
        <formula>Submission__r.Commenter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extracted_Text__c</fullName>
        <label>Extracted Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Page__c</fullName>
        <label>PDF Page</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Pick__c</fullName>
        <description>Docket Comment Application.</description>
        <label>Record Type Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Docket_Record_Type_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Reference_2__c</fullName>
        <label>Related Reference 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Reference__c</fullName>
        <label>Related Reference</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relevant_Essays__c</fullName>
        <label>Relevant Essays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Snippet_Status__c</fullName>
        <label>Snippet Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snippet Entered</fullName>
                    <default>true</default>
                    <label>Snippet Entered</label>
                </value>
                <value>
                    <fullName>Snippet Entry Verified</fullName>
                </value>
                <value>
                    <fullName>Ready for Agency Review</fullName>
                </value>
                <value>
                    <fullName>Snippet Read by Agency</fullName>
                </value>
                <value>
                    <fullName>Snippet Captured in Summary</fullName>
                </value>
                <value>
                    <fullName>Snippet Needs Edits</fullName>
                </value>
                <value>
                    <fullName>Agency Response Drafted</fullName>
                </value>
                <value>
                    <fullName>Agency Response Complete</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Addressed in Essay</fullName>
                    <isActive>false</isActive>
                    <label>Addressed in Essay</label>
                </value>
                <value>
                    <fullName>Agency Edits</fullName>
                    <isActive>false</isActive>
                    <label>Agency Edits</label>
                </value>
                <value>
                    <fullName>Agency Response Started</fullName>
                    <isActive>false</isActive>
                    <label>Agency Response Started</label>
                </value>
                <value>
                    <fullName>Agency Topic Change</fullName>
                    <isActive>false</isActive>
                    <label>Agency Topic Change</label>
                </value>
                <value>
                    <fullName>Comment Added</fullName>
                    <isActive>false</isActive>
                    <label>Comment Added</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Number__c</fullName>
        <formula>Submission__r.Submission_Number__c</formula>
        <label>Submission Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Snippets</relationshipLabel>
        <relationshipName>Snippets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Substantive__c</fullName>
        <formula>Text(Submission__r.Have_Snippets__c)</formula>
        <label>Substantive?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <formula>Topic__r.Topic_Name__c</formula>
        <label>Topic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Record_Type_Pick__c</field>
                <operation>equals</operation>
                <valueField>Topic__c.Record_Type_Pick__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Snippets</relationshipLabel>
        <relationshipName>Substantive_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>A piece extracted from something larger, like text extracted from a document, initially used for text extracted from comments submitted by the public on dockets.</description>
    <label>Snippet</label>
    <nameField>
        <displayFormat>SBC-{000000}</displayFormat>
        <label>Snippet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snippets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Extracted_Text__c</columns>
        <columns>Response__c</columns>
        <columns>Related_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US_Step_1_SUPP</value>
        </filters>
        <label>All Waters of the US</label>
    </listViews>
    <listViews>
        <fullName>All_Bristol_Bay</fullName>
        <columns>Notes__c</columns>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Extracted_Text__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Snippet_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Bristol_Bay</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>2.2</value>
        </filters>
        <label>All Bristol Bay</label>
    </listViews>
    <listViews>
        <fullName>All_WOTUS_Recommendation_Snippets</fullName>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <columns>Document_Number__c</columns>
        <columns>PDF_Page__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US_Step_1_SUPP</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>5.5</value>
        </filters>
        <label>All WOTUS Recommendations Snippets</label>
    </listViews>
    <listViews>
        <fullName>First_2018</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>First-2018</label>
    </listViews>
    <listViews>
        <fullName>Step_1_13_9_13_11</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.9</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.10</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.11</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.5</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.6</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.7</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.8</value>
        </filters>
        <label>Step 1?, 13.5-13.11</label>
    </listViews>
    <listViews>
        <fullName>Step_1_Topic_13_Rulemaking</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Step 1 Commenting Query</label>
    </listViews>
    <listViews>
        <fullName>Topic_1_0_Step_1_Test</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>2.0</value>
        </filters>
        <label>Topic 2.0 Step 1 Test</label>
    </listViews>
    <listViews>
        <fullName>Topic_1_0_Test</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Snippet_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>1.0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US_Step_0</value>
        </filters>
        <label>Topic 1.0 Step 0 Timeframe</label>
    </listViews>
    <listViews>
        <fullName>WOTUS_Step_2_All_Users</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Extracted_Text__c</columns>
        <columns>Response__c</columns>
        <columns>Related_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US_Step_2</value>
        </filters>
        <label>WOTUS - Step 2 (All Users)</label>
    </listViews>
    <listViews>
        <fullName>WOTUS_Step_2_Topic_1_for_Jane</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>PDF_Page__c</columns>
        <columns>Topic__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Notes__c</columns>
        <columns>Extracted_Text__c</columns>
        <columns>Related_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US_Step_2</value>
        </filters>
        <filters>
            <field>Snippet_Status__c</field>
            <operation>equals</operation>
            <value>Snippet Entered,Snippet Entry Verified</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>startsWith</operation>
            <value>1.</value>
        </filters>
        <label>WOTUS - Step 2 Topic 1 (for Jane)</label>
    </listViews>
    <listViews>
        <fullName>Waters_of_the_US</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Waters of the US</label>
    </listViews>
    <listViews>
        <fullName>Waters_of_the_US_Step_1_Record_type_f</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Snippet__c.Waters_of_the_US</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.0</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.1</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.2</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.4</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>13.3</value>
        </filters>
        <label>Step 1?, 13.0-13.4</label>
    </listViews>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>California_Selenium</fullName>
        <active>true</active>
        <label>California Selenium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missouri_NNC_Docket</fullName>
        <active>true</active>
        <label>Missouri NNC Docket</label>
    </recordTypes>
    <recordTypes>
        <fullName>WOTUS_Recommendations</fullName>
        <active>true</active>
        <description>to host recommendations people made on what EPA should do for Step 2</description>
        <label>WOTUS Recommendations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water_Quality_Certification</fullName>
        <active>true</active>
        <label>Water Quality Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_0</fullName>
        <active>true</active>
        <label>Waters of the US – Step 0</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_1_SUPP</fullName>
        <active>true</active>
        <label>Waters of the US – Step 1 SUPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_2</fullName>
        <active>true</active>
        <label>Waters of the US – Step 2</label>
    </recordTypes>
</CustomObject>